# YSAI

./: .gitignore  .gitmodules  CLAUDE.md  agent.md  llm.md  make_study_nb.py  prd.md  verify_weak_topics.py
.claude/: settings.json
.claude/commands/: finish.md  memo.md  study.md
00.memo/: 2026-06-02.md  2026-06-03.md  2026-06-08.md  2026-06-22.md
01.basic_study/: init_progress.py  prob_stats.md  progress.json  session_log.md  test_guide.md
02.codebase/01.python/: colab_ready_notebook.ipynb  python_basics_script.py
02.codebase/03.RAG-park/: README.md  requirements.txt
02.codebase/03.RAG-park/part3/evaluation/neo4j_text2cypher/: .env.example  README.md  eval.py  eval_results(sample).csv  pyproject.toml  requirements.txt  retriever.py
02.codebase/03.RAG-park/part3/evaluation/ragas/: .env.example  README.md  graph_rag_evaluation_results_20260422_113537(sample).csv  graph_rag_results(sample).csv  graphrag_ragas_evaluation.ipynb  pyproject.toml  requirements.txt
02.codebase/03.RAG-park/part4/final_chatbot/: README.md  app.py  pyproject.toml  requirements.txt
02.codebase/03.RAG-park/part4/graphrag_text2cypher_agent/: .env.example  README.md  main.py  nodes.py  prompts.py  pyproject.toml  requirements.txt  schema.py  state.py
03.agent-SOTA/: ai_agent_trends_2026_05.md
04.top10_papers/generative_agents/: .gitignore
05.seminar_project/: DAG Ablation Study 실험 설계.docx  README.md  prd.md  pyproject.toml  setup.py  state_exp04.json  state_exp08.json
05.seminar_project/Semester1/: 2510.19420v2_summary.md  Sem1 Summary
05.seminar_project/docs/bible/: bible.html  package-lock.json  package.json  study.md
05.seminar_project/exp/: 260413_exp01_baseline_ko.md  260413_exp02_saas_baseline.md  260413_exp04_qag_d.md  260413_exp06_multi_llm.md  260413_exp06_multi_llm.py  260413_exp06_multi_llm_ko.md  260413_exp07_dss.md  260413_exp07_dss.py  260413_exp08_ascore_improved.md  NodeDescription_ko.md
05.seminar_project/src/: graphs.py
05.seminar_project/src/evaluators/: exp_logprobs_c.py  exp_multi_llm.py
basic/: CLAUDE.md  nlp.md  progress.json  session_log.md  test_guide.md
basic study/: init_progress.py  linear_algebra.md  python_syntax.md
paper/: .gitignore  extract_docx.py  requirements.txt  state_exp03.json  state_exp05.json  state_exp06.json  세미나 프로젝트 연구 계획서.docx
seminar project/: EXPERIMENTS.md  doc_content.txt  state_exp07.json  technical_specs.md
(+140 files in other folders)
