[tool.poetry]
name = "DAG"
version = "1.0.0"
description = "AgentDAG: DAG-based multi-agent orchestration with partial feedback propagation"
authors = ["yongjun"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
openai = ">=1.14.0"
pydantic = ">=2.6.4"
python-dotenv = ">=1.0.1"
numpy = ">=1.26.4"
anthropic = "^0.94.0"
google-generativeai = "^0.8.6"
google-genai = "^1.72.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
