[project]
name = "graphrag-final-chatbot"
version = "0.1.0"
description = "Streamlit-based chatbot for GraphRAG Tool Agent"
dependencies = [
    "streamlit>=1.31.0",
    "python-dotenv>=1.2.2",
    "pyvis>=0.3.2",
    "neo4j>=5.28.3",
    "neo4j-graphrag>=1.14.1",
    "python-dotenv>=1.2.2",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
]
