[project]
name = "graphrag-text2cypher-evaluation"
version = "0.1.0"
description = "GraphRAG(Text2Cypher) 평가 파이프라인"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.28.3",
    "neo4j-graphrag[openai]>=1.13.1",
    "python-dotenv>=1.2.2",
    "jupyter>=1.1.1",
    "ipykernel>=7.2.0",
    "pandas>=2.2.3",
]
